# lovnotifier

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build.sh  float.html  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
resources/: AppIcon.icns  Info.plist
scripts/: activate.sh  lovnotifier-send.sh
src/: float.tsx  index.css  lovnotifier-send.sh  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FloatWindow.tsx  Settings.tsx
