[package]
name = "lovnotifier"
version = "3.0.0"
description = "Notification manager for tmux workflows"
authors = ["lovstudio"]
edition = "2021"

[lib]
name = "lovnotifier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lovnotifier"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
warp = "0.3"
tokio = { version = "1", features = ["sync"] }
image = "0.25.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
